feat: 暂告一段落

--- a/src/web/login/index.html
+++ b/src/web/login/index.html
@@ -2,5 +2,5 @@
     <!-- name属性 -->
     <input type="text" name="textfield" placeholder="请输入用户名" id="username"><br>
     <input type="password" name="textfield2" placeholder="请输入密码" id="password"><br>
-    <button type="submit" name="submit" οnclick="clickLogin()">立即登录</button>
+    <button id="loginBtn">立即登录</button>
 </div>
